--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,34 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+p {
+  font-family: DavidLibre, serif;
+  font-weight: bold;
 }
+
+.container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.column {
+  height: max-content;
+  min-height: 100px;
+  width: 100%;
+  margin: 10px;
+  border: 2px solid #7d7d7d; /* Параметры границы */
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.movable-item {
+  background-color: #fafdff;
+  height: 100px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.5);
+}
+
